--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-image-gallery": "^1.0.7",
     "react-slideshow-image": "^1.4.2",
     "theme-ui": "^0.3.1",
     "typeface-montserrat": "0.0.75",
