--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-datocms": "^2.2.1",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
