--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-image-gallery": "^1.0.7",
+    "react-slick": "^0.25.2",
     "react-slideshow-image": "^1.4.2",
+    "slick-carousel": "^1.8.1",
     "theme-ui": "^0.3.1",
     "typeface-montserrat": "0.0.75",
     "typeface-source-sans-pro": "^1.1.5"
