--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "dotenv": "^8.2.0",
     "gatsby": "^2.21.0",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
