--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
     "build": {
       "env": {
-        "DATO_API_TOKEN": "@georgebeauty2020"
+        "DATO_API_TOKEN": "9fa923e7b07e730b30e8feb70201f5"
       }
     }
   }
