--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@theme-ui/color": "^0.3.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.21.0",
     "gatsby-background-image": "^1.1.1",
@@ -30,8 +31,7 @@
     "react-slideshow-image": "^1.4.2",
     "slick-carousel": "^1.8.1",
     "theme-ui": "^0.3.1",
-    "typeface-montserrat": "0.0.75",
-    "typeface-source-sans-pro": "^1.1.5"
+    "typeface-poppins": "0.0.72"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.30.0",
