--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@reach/router": "^1.3.3",
     "@theme-ui/color": "^0.3.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.21.0",
